Changing the flag emoji.

--- a/README.html
+++ b/README.html
@@ -392,7 +392,7 @@ University of Helsinki, P.O. Box 27, 00014 Helsinki, Finland
 <ul>
 <li><b>Affiliation:</b> Department for Monitoring and Exploration
 Technologies, UFZ—Helmholtz Centre for Environmental Research GmbH,
-Leipzig, Germany :germany:</li>
+Leipzig, Germany :de:</li>
 <li><b> Institution ROR:</b> <a href="https://ror.org/000h6jb29">https://ror.org/000h6jb29</a></li>
 <li><b>E-mail:</b> <a href="mailto:steffen.zacharias@ufz.de" class="email">steffen.zacharias@ufz.de</a></li>
 <li><b>ORCID:</b> <a href="https://orcid.org/0000-0002-7825-0072">0000-0002-7825-0072</a></li>
