Updating the readme file.

--- a/README.html
+++ b/README.html
@@ -409,15 +409,15 @@ University of Helsinki, P.O. Box 27, 00014 Helsinki, Finland
 </ul></li>
 </ul>
 </div>
-<div id="use-license-orange_book" class="section level2">
-<h2>Use license :orange_book:</h2>
+<div id="use-license-balance_scale" class="section level2">
+<h2>Use license :balance_scale:</h2>
 <ul>
 <li><a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0
 1.0</a></li>
 </ul>
 </div>
-<div id="context-and-aims-dart" class="section level2">
-<h2>Context and aims :dart:</h2>
+<div id="context-and-aims-book-dart" class="section level2">
+<h2>Context and aims :book: :dart:</h2>
 <p>This repository hosts the information used to build the <a href="https://elter-ri.eu/">eLTER</a> SO Costs web application. This
 tool is a specialized resource designed to assist the eLTER (European
 Long-Term Ecosystem Research) community in estimating the costs
@@ -433,8 +433,8 @@ standard observations.</p>
 reliable means for the eLTER community to plan and allocate resources
 effectively.</p>
 </div>
-<div id="input-data-clipboard" class="section level2">
-<h2>Input data :clipboard:</h2>
+<div id="input-data-floppy_disk" class="section level2">
+<h2>Input data :floppy_disk:</h2>
 <p>The input data was built based on the agreement of the eLTER
 community regarding the standard observations. The data is located at
 the <code>data</code> folder and contains consensus information on the
@@ -461,51 +461,38 @@ costs associated to upgrade and operate the standard observations.</p>
 │ └── ... # folders and files by renv to compile the needed information for reproducibility   
 └── renv.lock # Lock file to capture the state of the R environment</code></pre>
 </div>
-<div id="development-in-r-and-shiny" class="section level2">
-<h2>Development in R and <code>Shiny</code></h2>
+<div id="development-in-r-and-shiny-man_technologist" class="section level2">
+<h2>Development in R and <code>Shiny</code> :man_technologist:</h2>
 <p>The web application is coded entirely in the <a href="https://www.r-project.org/">R programming language</a>, with a
 user interface developed using R <a href="https://shiny.posit.co/"><code>Shiny</code></a>. R
 <code>Shiny</code> is a powerful framework for building interactive web
 applications directly from R scripts, making it an ideal choice for
 creating accessible and user-friendly tools.</p>
-<div id="deployed-version-of-the-web-application-link" class="section level3">
-<h3>Deployed version of the web application :link:</h3>
+<div id="deployed-version-of-the-web-application-globe_with_meridians" class="section level3">
+<h3>Deployed version of the web application :globe_with_meridians:</h3>
 <p>You can access the current version of the <code>Shiny</code> app <a href="https://allantsouza.shinyapps.io/eLTER-SO-costs/">here</a>.</p>
 </div>
-<div id="future-hosting-on-elter-services-rocket" class="section level3">
-<h3>Future Hosting on eLTER Services :rocket:</h3>
+<div id="future-hosting-on-elter-services-portal-motorway" class="section level3">
+<h3>Future hosting on eLTER services portal :motorway:</h3>
 <p>Upon completion and thorough testing, this tool will be hosted as
-part of the eLTER services. This integration aims to provide seamless
-access and utility for the eLTER community. Until then, this repository
-serves as the primary hub for development, where updates, enhancements,
-and bug fixes will be continuously pushed.</p>
+part of the <a href="https://portal.elter.cerit-sc.cz/en">eLTER services
+portal</a>. This integration aims to provide seamless access and utility
+for the eLTER community. Until then, this repository serves as the
+primary hub for development, where updates, enhancements, and bug fixes
+will be continuously pushed.</p>
 </div>
-<div id="using-renv-for-reproducible-environments-paperclip" class="section level3">
-<h3>Using <code>renv</code> for Reproducible Environments
-:paperclip:</h3>
+</div>
+<div id="reproducibility-gear" class="section level2">
+<h2>Reproducibility :gear:</h2>
 <p>This repository utilizes the <a href="https://rstudio.github.io/renv/"><code>renv</code></a> package to
 manage R dependencies, ensuring that everyone working on the project has
-access to the same package versions. This approach guarantees that the
-project is reproducible, avoiding the “it works on my machine” problem.
-By locking the project to specific versions of R packages,
-<code>renv</code> ensures that the project can be run consistently
-across different setups and over time.</p>
-<div id="why-use-renv" class="section level4">
-<h4>Why Use <code>renv</code>?</h4>
-<ul>
-<li>Reproducibility: Ensures that the R environment is consistent across
-different machines and over time, making the results reliable and
-reproducible.</li>
-<li>Collaboration: Simplifies collaboration by ensuring all contributors
-are using the same package versions.</li>
-<li>Isolation: Keeps project dependencies separate from your global R
-environment, minimizing conflicts between projects.</li>
-</ul>
-</div>
-<div id="getting-started-with-renv" class="section level4">
-<h4>Getting Started with <code>renv</code></h4>
-<p>When you clone this repository for the first time, follow these steps
-to set up <code>renv</code>:</p>
+access to the same package versions. By locking the project to specific
+versions of R packages, <code>renv</code> ensures that the project can
+be run consistently across different setups and over time.</p>
+<div id="getting-started-beginner" class="section level3">
+<h3>Getting started :beginner:</h3>
+<p>When you clone or fork this repository for the first time, follow
+these steps to set up <code>renv</code>:</p>
 <ul>
 <li>Install <code>renv</code> (if you haven’t already): You can install
 <code>renv</code> globally in your R setup using:</li>
@@ -527,11 +514,13 @@ the <code>renv.lock</code> file, into a project-local library.</p>
 start working on the project. The <code>renv</code> environment will
 automatically be activated when you open the project in the future.</li>
 </ul>
-<p>By following these steps, you can ensure that the project
-dependencies are correctly managed, aiding in maintaining the project’s
-integrity and reproducibility.</p>
 </div>
 </div>
+<div id="related-resources" class="section level2">
+<h2>Related resources</h2>
+</div>
+<div id="citation" class="section level2">
+<h2>Citation</h2>
 </div>
 </div>
 
