Updating the readme file.

--- a/README.html
+++ b/README.html
@@ -494,30 +494,43 @@ be run consistently across different setups and over time.</p>
 <p>When you clone or fork this repository for the first time, follow
 these steps to set up <code>renv</code>:</p>
 <ul>
-<li>Install <code>renv</code> (if you haven’t already): You can install
-<code>renv</code> globally in your R setup using:</li>
+<li>Install <code>renv</code> (if you haven’t already)
+<ul>
+<li>You can install <code>renv</code> globally in your R setup
+using:</li>
+</ul></li>
 </ul>
 <pre><code>install.packages(&quot;renv&quot;)</code></pre>
 <ul>
-<li><p>Clone the Repository: :arrow_down_small: Clone this repository to
-your local machine as you normally would.</p></li>
-<li><p>Launch R: :computer: Open an R session and set the working
-directory to the root of the cloned repository.</p></li>
-<li><p>Restore the Environment: :rewind: Run the following command in
-your R console:</p></li>
+<li>Clone the repository
+<ul>
+<li>Clone this repository to your local machine.</li>
+</ul></li>
+<li>Launch R
+<ul>
+<li>Open an R session and set the working directory to the root of the
+cloned repository.</li>
+</ul></li>
+<li>Restore the environment
+<ul>
+<li>Install all the necessary packages, as specified in the
+<code>renv.lock</code> file, into a project-local library by running the
+following command in your R console:</li>
+</ul></li>
 </ul>
 <pre><code>renv::restore()</code></pre>
-<p>This command will install all the necessary packages, as specified in
-the <code>renv.lock</code> file, into a project-local library.</p>
 <ul>
-<li>Start Working: After the restoration process is complete, you can
-start working on the project. The <code>renv</code> environment will
-automatically be activated when you open the project in the future.</li>
+<li>Start working
+<ul>
+<li>After the restoration process is complete, you can start working on
+the project. The <code>renv</code> environment will automatically be
+activated when you open the project in the future.</li>
+</ul></li>
 </ul>
 </div>
 </div>
-<div id="related-resources" class="section level2">
-<h2>Related resources</h2>
+<div id="related-resources-paperclips" class="section level2">
+<h2>Related resources :paperclips:</h2>
 <ul>
 <li><a href="https://elter-ri.eu/storage/app/uploads/public/62c/ea2/a00/62cea2a002845239798196.pdf">Zacharias,
 S. et al. (2021). Discussion paper on eLTER Standard Observations (eLTER
@@ -525,9 +538,9 @@ SOs). Deliverable D3.1 EU Horizon 2020 eLTER PLUS Project, Grant
 agreement No. 871128.</a></li>
 </ul>
 </div>
-<div id="credit-author-statement" class="section level2">
+<div id="credit-author-statement-man_scientist-woman_scientist" class="section level2">
 <h2><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1002/leap.1210">CRediT</a>
-author statement</h2>
+author statement :man_scientist: :woman_scientist:</h2>
 <table>
 <colgroup>
 <col width="22%" />
