--- a/README.html
+++ b/README.html
@@ -533,9 +533,9 @@ activated when you open the project in the future.</li>
 <h2>Related resources :paperclips:</h2>
 <ul>
 <li><a href="https://elter-ri.eu/storage/app/uploads/public/62c/ea2/a00/62cea2a002845239798196.pdf">Zacharias,
-S. et al. (2021). Discussion paper on eLTER Standard Observations (eLTER
-SOs). Deliverable D3.1 EU Horizon 2020 eLTER PLUS Project, Grant
-agreement No. 871128.</a></li>
+S. et al. (2021).</a> Discussion paper on eLTER Standard Observations
+(eLTER SOs). Deliverable D3.1 EU Horizon 2020 eLTER PLUS Project, Grant
+agreement No. 871128.</li>
 </ul>
 </div>
 <div id="credit-author-statement-man_scientist-woman_scientist" class="section level2">
@@ -582,8 +582,13 @@ Validation, Writing - Review &amp; Editing.</td>
 </tbody>
 </table>
 </div>
-<div id="citation" class="section level2">
-<h2>Citation</h2>
+<div id="acknowledgements-bank-eu" class="section level2">
+<h2>Acknowledgements :bank: :eu:</h2>
+<p>This work has been supported by the European Union’s H2020 (grant
+agreement No 871128 - eLTER PLUS).</p>
+</div>
+<div id="citation-memo" class="section level2">
+<h2>Citation :memo:</h2>
 <p>Souza, AT., Alam, SA., Rasilo, T., Zacharias, S., Bäck, J. (2024).
 eLTER SO Costs web application.</p>
 </div>
