Adding the link to eLTER PLUS

--- a/README.html
+++ b/README.html
@@ -645,7 +645,7 @@ Validation, Writing - Review &amp; Editing.</td>
 <div id="acknowledgements-bank-eu" class="section level2">
 <h2>Acknowledgements :bank: :eu:</h2>
 <p>This work has been supported by the European Union’s H2020 (grant
-agreement No 871128 - eLTER PLUS).</p>
+agreement No 871128 - <a href="https://cordis.europa.eu/project/id/871128">eLTER PLUS</a>).</p>
 </div>
 <div id="citation-memo" class="section level2">
 <h2>Citation :memo:</h2>
