Fixing the quick links.

--- a/README.html
+++ b/README.html
@@ -358,16 +358,21 @@ display: none;
 <div id="quick-links" class="section level2">
 <h2>Quick Links</h2>
 <ul>
-<li><a href="#id_#Authors">Authors</a></li>
-<li><a href="#id_#CRediT">CRediT</a></li>
-<li><a href="#id_#Use%20license">Use license</a></li>
-<li><a href="#id_#Input%20data">Input data</a></li>
-<li><a href="#id_#Structure%20of%20files">Structure of files</a></li>
-<li><a href="#id_#Development">Development</a></li>
-<li><a href="#id_#Reproducibility">Reproducibility</a></li>
-<li><a href="#id_#Citation">Citation</a></li>
-<li><a href="#id_#Acknowledgements">Acknowledgements</a></li>
-<li><a href="#id_#Related%20resources">Related resources</a></li>
+<li><a href="#id_#%20Authors%20:busts_in_silhouette:">Authors</a></li>
+<li><a href="#id_#%20%5BCRediT%5D(https://onlinelibrary.wiley.com/doi/epdf/10.1002/leap.1210)%20author%20statement">CRediT</a></li>
+<li><a href="#id_#%20Use%20license%20:balance_scale:">Use
+license</a></li>
+<li><a href="#id_#%20Context%20and%20aims%20:book:%20:dart:">Context and
+aims</a></li>
+<li><a href="#id_#%20Input%20data%20:floppy_disk:">Input data</a></li>
+<li><a href="#id_#%20Structure%20of%20files%20:open_file_folder:">Structure of
+files</a></li>
+<li><a href="#id_#%20Development%20:man_technologist:">Development</a></li>
+<li><a href="#id_#%20Reproducibility%20:repeat:">Reproducibility</a></li>
+<li><a href="#id_#%20Citation%20:memo:">Citation</a></li>
+<li><a href="#id_#%20Acknowledgements%20:bank:%20:eu:">Acknowledgements</a></li>
+<li><a href="#id_#%20Related%20resources%20:paperclips:">Related
+resources</a></li>
 </ul>
 </div>
 <div id="authors-busts_in_silhouette" class="section level2">
